--- a/medimind.ipynb
+++ b/medimind.ipynb
@@ -12,6 +12,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "9208e92d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "26b6f606",
    "metadata": {},
