Remove Hugging Face token

--- a/medimind.ipynb
+++ b/medimind.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "26b6f606",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
     "\n",
     "load_dotenv()  # load variables from .env\n",
     "\n",
-    "hf_token = os.getenv(\"HUGGINGFACE_API_KEY\")\n",
+    "hf_token = os.getenv(\"your_token\")\n",
     "\n",
     "print(f\"Your token: {hf_token}\")\n"
    ]
