--- a/openai.ipynb
+++ b/openai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "47899765",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
     "\n",
     "load_dotenv()  # load variables from .env\n",
     "\n",
-    "OPENAI_token = os.getenv(\"OPENAI_API_KEY\")\n",
+    "OPENAI_token = os.getenv(\"your_api_key\")\n",
     "\n",
     "\n",
     "print(f\"Your token: {OPENAI_token}\")\n"
